--- a/style/mobile.css
+++ b/style/mobile.css
@@ -1,67 +1,309 @@
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap');
+
+@font-face{ font-family: 'JetBrains Mono'; src:url(font/JetBrainsMono-Medium.woff) format('woff'); }
+@font-face{ font-family: 'JetBrains Mono I'; src:url(font/JetBrainsMono-Medium-Italic.woff) format('woff'); }
+@font-face{ font-family: 'D2Coding'; src:url(font/D2Coding.woff) format('woff'); }
+
 @media screen and (max-width:800px){
-    p.a:hover { color:#8400ff; }
-
-    input[type="text"]:focus{ width: 15.625em; z-index: 1; border-bottom: 1px solid #4b4b4b; cursor: text; }
-    input[type="text"]:visited{ border: none; }
-    input[type="text"]:hover{   border: none; }
-    input[type="text"]:active{  border: none; }
-
-    *::-webkit-scrollbar {       border-radius: 0.5em 0.5em 0.5em 0.5em; background-color: #4b4b4b00; width: 0.2em; height: 0.4em !important; }
-    *::-webkit-scrollbar-thumb { border-radius: 0.5em 0.5em 0.5em 0.5em; }
-    *::-webkit-scrollbar-track { border-radius: 0.5em 0.5em 0.5em 0.5em; }
+    *::-webkit-scrollbar{
+        width: 0rem; 
+        height: 0rem; 
+    }
     
-
-    html{   margin: -2em 1.5em 0.5em 1.5em; }
-    header{ padding: 3.5em 2em 1em 2em; margin-bottom: 0; background-color: #ffffff; z-index: 10000; }
-
-    section{      margin-left: 0em; }
-    section#body{ padding-left: 2rem; padding-right: 2rem; top: 6em; display: inline; position: absolute; right: 0 !important; margin: 0em !important; }
-    section#body section{ margin-bottom: 5em; }
-
-    code{  display: inline; font-family: 'JetBrains Mono', 'D2Coding'; line-height: 1em; font-size: 0.8em; }
-    table{ margin-top: 1.5em; margin-bottom: 1.5em; font-size: 0.9em; margin-right: 3em; }
-
-
-    p.title{  font-size: 1em; }
-    p.stitle{ font-size: 0.9em; }
-    p.dscrpt{ font-size: 0.8em; }
-
-    p.crfBox, p.plsBox{  line-height: 2em; }
-
-    p.code{      font-size: 0.7em; }
-    p#thank_you{ font-size: 0.8em; }
-
-
-    div#side{    display: none; margin: -2em 0 0 0 !important; padding-left: 2em; padding-right: 2em; width: 93%; height: 100%; background-color: rgba(0, 0, 0, 0.425); }
-    div#blank{   display: none; }
-    div#sideBar{ display: none; border-radius: 0em 0.5em 0.5em 0.5em; position: fixed !important; left: 0%; top: 0%; overflow: auto; width: 30% !important; height: 87% !important; margin: 0; margin-top: 4.5em; }
+    li.a::before{
+        content: ''; 
+        background: url('../img/link.png') no-repeat; 
+        background-size: 1.1em 1.1em; 
+        filter: invert(100%);
+        width: 1.1em; 
+        height: 1.1em; 
+        display: inline-block; 
+        padding-left: 0.3em !important; 
+    }
     
-    div.code, div.crf, div.pls{ font-size: 0.8em; margin-top: 1.3em; padding: 0.1em 0.5em 0.1em 0.5em; border-radius: 0.4em 0.4em; white-space:nowrap; overflow: auto; }
-
-    div.table{ overflow: auto; }
-    div#sA{    margin-top: 0.7em; margin-bottom: 1em; }
-    div#wrap{  margin: 0em 0em }
-    div.thanks_box{ margin-right: 2em; margin-bottom: 2em !important; }
+    li.sA::before{
+        content: ''; 
+        background: url('../img/content.png') no-repeat; 
+        background-size: 1.1em 1.1em;
+        filter: invert(100%);
+        width: 1.1em; 
+        height: 1.1em; 
+        display: inline-block; 
+        padding-left: 0.3em !important; 
+    }
+    
+    li.sA, li.a, aside dt, img#docs, dd:hover {
+        cursor: pointer;
+    }
+    
+    aside:hover {
+        width: 35rem;
+        transition-delay: 0s;
+    }
+    
+    aside dt:hover {
+        background-color: #515151;
+    }
     
     
-    img#kkotb_rfnc{ width: 1.5em; height: auto; }
-    img.moreImg {   height: 3em; width: auto; margin: 3em 0em 0em 0em; }
-    img.thank { width: 2.5em; height: auto; }
+    * {
+        margin: 0;
+        padding: 0;
+        font-family: 'Noto Sans', 'Noto Sans KR';
+        font-size: 1rem;
+    }
+    
+    html, body {
+        width: 100%;
+        height: 100%;
+    }
+    
+    body {
+        white-space: nowrap;
+        overflow: visible;
+    }
+    
+    aside, article#body * {
+        display: inline-block;
+    }
+    
+    aside {
+        position: fixed;
+        background: black;
+        color: white;
+        width: 4rem;
+        height: 100%;
+        padding: 3rem 1rem;
+        text-align: center;
+        z-index: 99999;
+    
+        transition-property: width;
+        transition-duration: 0.55s;
+    }
+    
+    aside dl {
+        position: relative;
+        top: 10rem;
+        width: 8rem;
+    }
+    
+    aside dt {
+        height: 1.7rem;
+        margin-bottom: 1.7rem;
+        padding: 0.5rem 0;
+        border-radius: 0.5rem;
+        position: relative;
+        left: 0;
+    
+        transition-property: background;
+        transition-duration: 0.4s;
+    }
 
-    img[class = "sttc"], img[class = "prttp"]{ width: 0.8em; height: auto; margin-right: 0.25em;  }
-
-
-    input[type="text"]{   height: 1.5rem; font-size: 0.65em; }
-    input[type="submit"]{ width: 2rem; height: 2rem; background-size: 1.5rem 1.5rem; padding: 0em 0em 0em 0em !important; }
-
-
-    tr{       padding: 1em 1em 1em 1em; font-size: 0.8em !important; line-height: 0.8em; }
-    th, td{   border-bottom: 0.016em solid #4b4b4b; padding: 0.8em 0.8em 0.8em 0.8em; }
-    sup, sub{ font-size: 5px; }
-    li{ font-family: 'Nanum Gothic'; }
-    li.dscrpt{ font-size: 0.8em; line-height: 2em; }
-    li.sA{     font-size: 0.8em; }
-    li.a{      font-size: 0.8em; transition:color .2s ease; }
-
-    .hljs{ line-height: 3em; }
+    
+    
+    aside span#list {
+        display: none;
+        width: 15rem;
+        opacity: 0;
+        text-align: left;
+        position: absolute;
+        top: 0rem;
+        left: 0rem;
+    }
+    
+    span#list h1 {
+        font-size: 1.7rem;
+        font-weight: bold;
+        position: absolute;
+        top: -13.2rem;
+    }
+    
+    span#list dd {
+        font-size: 1.1rem;
+        display: inline-block;
+        font-weight: 500;
+        margin-bottom: 1.5rem;
+    }
+    
+    div#docs_space {
+        position: relative;
+        left: 0;
+        width: 4rem;
+    }
+    
+    img#docs {
+        width: 2rem;
+        height: 2rem;
+    }
+    
+    img.side_icon {
+        width: 1.7rem;
+        height: auto;
+        filter: invert(50%);
+    }
+    
+    img#this {
+        filter: invert(0%);
+    }
+    
+    article {
+        padding: 5rem 4rem;
+        width: calc(100% - 18rem);
+        float: right;
+        overflow: visible;
+    }
+    
+    div.content {
+        margin-top: 4rem;
+        margin-bottom: 4rem;
+        width: 100%;
+    }
+    
+    p {
+        display: inline;
+    }
+    
+    p.title {
+        display: block;
+        font-size: 1.9rem;
+        font-weight: 550;
+        margin-bottom: 2.3rem;
+    }
+    
+    p.stitle {
+        display: block;
+        font-size: 1.4rem;
+        font-weight: 550;
+        margin-bottom: 2.3rem;
+    }
+    
+    p.dscrpt, p.code {
+        line-height: 2rem;
+        white-space: pre-line;
+    }
+    
+    p.code {
+        font-family: 'JetBrains Mono', 'D2Coding';
+        font-size: 0.9rem;
+        background-color: #ebebeb;
+        padding: 0.1rem 0.2rem;
+        border-radius: 0.3rem;
+    }
+    
+    li.a, li.sA {
+        list-style: none;
+        line-height: 2rem;
+        font-size: 1rem;
+    }
+    
+    li.a {
+        font-weight: bold;
+        display: inline-block;
+    }
+    
+    li.dscrpt {
+        line-height: 2rem;
+        white-space: pre-line;
+    }
+    
+    div#sA {
+        margin-top: 2.3rem;
+        margin-bottom: 2.3rem;
+    }
+    
+    div.code, div.crf, div.pls {
+        padding: 1.5rem;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+        border-radius: 1rem;
+        white-space: nowrap;
+        overflow: auto;
+    }
+    
+    div.code {
+        background: #f7f7f7;
+        box-shadow: 0rem 0rem 1rem 0rem #dddddd;
+        overflow: auto;
+        white-space: nowrap;
+    }
+    
+    div.code code {
+        font-size: 0.9rem;
+        font-family: 'JetBrains Mono', 'D2Coding';
+        line-height: 2rem;
+    }
+    
+    div.pls {
+        background: white;
+        box-shadow: 0rem 0rem 1rem 0rem #00ffc8;
+    }
+    
+    div.pls p.plsBox {
+        font-size: 0.9rem;
+        line-height: 2rem;
+        font-weight: bold;
+        color: #00ffc8;
+    }
+    
+    div.crf {
+        background: white;
+        box-shadow: 0rem 0rem 1rem 0rem #ff00aa;
+    }
+    
+    div.crf p.crfBox {
+        font-size: 0.9rem;
+        line-height: 2rem;
+        font-weight: bold;
+        color: #ff00aa;
+        overflow: auto;
+        white-space: nowrap;
+    }
+    
+    div.table {
+        margin: 2rem 0;
+        width: 100%;
+    }
+    
+    table {
+        border-left: 0em solid white;
+        border-right: 0em solid white;
+        border-collapse: collapse;
+        width: 100%;
+        border-top: 0.5rem solid black;
+    }
+    
+    th {
+        padding: 2rem 0;
+    }
+    
+    tr {
+        line-height: 2rem;
+    }
+    
+    th, td {
+        border-bottom: 0.1em solid #4b4b4b;
+        padding: 1.2rem;
+    }
+    
+    img.sttc, img.prttp {
+        width: 1rem;
+        height: 1rem;
+        margin-left: 0.7rem;
+    }
+    
+    img.thank {
+        filter: invert(100%);
+        width: 5rem;
+    }
+    
+    div#imgBox {
+        white-space: nowrap;
+        overflow: auto;
+    }
+    
+    div.thanks_box {
+        display: inline;
+        margin-right: 3rem;
+    }
 }
