--- a/style/newToast.css
+++ b/style/newToast.css
@@ -8,11 +8,12 @@
     max-width: 40%;
     z-index: 9999999999999999999;
     font-family: 'Nanum Gothic';
-    font-weight: 500;
+    font-weight: 400;
     font-size: 1.1em;
     text-align: center;
     border-radius: 1em;
     margin: 0 auto;
+    padding: 1.5rem 0;
     display: none;
 }
 
@@ -33,6 +34,5 @@ div.danger {
 }
 
 #toast_con p {
-    margin: 1.5em 1em;
     word-break: break-all;
 }
